--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
     "lib": ["dom", "ES2015"],
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "baseUrl": "./src",
+    "paths": {
+      ".": ["."]
+    }
   },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
