--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "admin",
-  "version": "0.0.0",
+  "name": "container",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "vite build",
