--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "engines": {
     "node": ">=18"
   },
-  "name": "kitchen-sink",
+  "name": "react-turbo-mfe",
   "packageManager": "npm@10.8.2",
   "workspaces": [
     "apps/*",
