--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -34,5 +34,10 @@
     "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "react-hook-form": "^7.53.0",
+    "zod": "^3.23.8"
   }
 }
