--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -22,6 +22,7 @@
     "preset": "@repo/jest-presets/browser"
   },
   "devDependencies": {
+    "@repo/ui": "*",
     "@repo/eslint-config": "*",
     "@repo/jest-presets": "*",
     "@repo/typescript-config": "*",
