--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@repo/logger": "*",
+    "@repo/database": "*",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
