--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -16,7 +16,7 @@
     "db:migrate:deploy": "prisma migrate deploy",
     "db:migrate:dev": "prisma migrate dev",
     "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts",
+    "db:seed": "npx tsx prisma/seed.ts",
     "generate": "prisma generate",
     "prebuild": "npm run generate",
     "predev": "npm run generate",
