--- a/apps/container/tsconfig.json
+++ b/apps/container/tsconfig.json
@@ -3,7 +3,11 @@
   "extends": "@repo/typescript-config/vite.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "./src",
+    "paths": {
+      ".": ["."]
+    }
   },
   "include": ["src", "vite.config.ts"]
 }
