react-turbo-mfe: update database schema and seed script

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -26,6 +26,7 @@
     "preset": "@repo/jest-presets/node"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@repo/eslint-config": "*",
     "@repo/jest-presets": "*",
     "@repo/typescript-config": "*",
