--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "*"
+    "@repo/ui": "*",
+    "@repo/query": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.62",
