--- a/packages/query/package.json
+++ b/packages/query/package.json
@@ -25,6 +25,7 @@
     "@repo/eslint-config": "*",
     "@repo/jest-presets": "*",
     "@repo/typescript-config": "*",
+    "@tanstack/react-query-devtools": "^5.53.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.62",
@@ -34,5 +35,9 @@
     "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.53.1",
+    "axios": "^1.7.6"
   }
 }
