react-turbo-mfe: add pie chart to dashboard page

--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@repo/ui": "*",
-    "@repo/query": "*"
+    "@repo/query": "*",
+    "@repo/chart": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.62",
