--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -34,5 +34,9 @@
     "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "highcharts": "^11.4.8",
+    "highcharts-react-official": "^3.2.1"
   }
 }
