--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -34,5 +34,11 @@
     "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.1.0",
+    "@ag-grid-community/core": "^32.1.0",
+    "@ag-grid-community/react": "^32.1.0",
+    "@ag-grid-community/styles": "^32.1.0"
   }
 }
