--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -39,6 +39,7 @@
     "@ag-grid-community/client-side-row-model": "^32.1.0",
     "@ag-grid-community/core": "^32.1.0",
     "@ag-grid-community/react": "^32.1.0",
-    "@ag-grid-community/styles": "^32.1.0"
+    "@ag-grid-community/styles": "^32.1.0",
+    "@ag-grid-enterprise/row-grouping": "^32.1.0"
   }
 }
