--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf dist",
     "dev": "vite --host 0.0.0.0 --port 3001 --clearScreen false",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "preview": "vite preview --host 0.0.0.0 --port 3001"
   },
   "dependencies": {
     "@repo/chart": "*",
